k8s/base/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      labels:
        run: carrera-api
    spec:
      containers:
        - name: carrera-api
          image: carrera-api
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
