k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carrera-api
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    run: carrera-api
  type: NodePort
