k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: carrera-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "carrera-api-uat.gcp.gigsternetwork.com"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.allow-http: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "carrera-api-uat.gcp.gigsternetwork.com"
    secretName: carrera-api-tls
  rules:
  - host: "carrera-api-uat.gcp.gigsternetwork.com"
    http:
      paths:
      - backend:
          serviceName: carrera-api
          servicePort: 80
